chore(back): store avatars in db instead of imgbb
